# adams-for-projects

./: .gitignore  LICENSE  NOTICE.md  README.md  hotfix.patch  pyproject.toml  test.txt  text1.txt
reports/: 2026-02-24.run.json
src/adams_for_projects/: aps_client.py  aps_client.py.bak  cache.py  cli.py  constants.py  exporter.py  scoring.py
src/adams_for_projects.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
