[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adams-for-projects"
version = "0.1.0"
description = "ADAMS for Projects: a daily APS/ADAMS document radar that surfaces top project candidates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]

[project.scripts]
adams = "adams_for_projects.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
